Update library for protocol V2

--- a/library.properties
+++ b/library.properties
@@ -2,13 +2,13 @@
 # UTF-8 supported.
 
 # The name of your Library as you want it formatted.
-name = AugmentaP5
+name = Augmenta for Processing
 
 # List of authors. Links can be provided using the syntax [author name](url).
-authors = [Theoriz](http://theoriz.com)
+authors = [Theoriz](https://www.theoriz.com/)
 
 # A web page for your Library, NOT a direct link to where to download it.
-url = https://github.com/Theoriz/AugmentaP5
+url = https://github.com/Theoriz/augmenta-for-processing
 
 # The category (or categories) of your Library, must be from the following list:
 #   "3D"            "Animation"     "Compilations"      "Data"          
@@ -25,13 +25,13 @@ categories = I/O
 # repeating the name of your Library here. Also, avoid saying anything redundant 
 # like mentioning that it's a Library. This should start with a capitalized 
 # letter, and end with a period.
-sentence = A library to interact with Augmenta systems
+sentence = Allows you to use tracking data coming from [Augmenta](https://augmenta-tech.com/) systems.
 
 # Additional information suitable for the Processing website. The value of
 # 'sentence' always will be prepended, so you should start by writing the
 # second sentence here. If your Library only works on certain operating systems,
 # mention it here.
-paragraph =  
+paragraph = Augmenta is a sensorless tracking technology for creative applications. People and objects can be tracked without limitations of number of people or area size. The technology has been designed for events or permanent installations in mind.
 
 # Links in the 'sentence' and 'paragraph' attributes can be inserted using the
 # same syntax as for authors. 
@@ -41,11 +41,11 @@ paragraph =
 # compare different versions of the same Library, and check if an update is 
 # available. You should think of it as a counter, counting the total number of 
 # releases you've had.
-version = 1  # This must be parsable as an int
+version = 1 # This must be parsable as an int
 
 # The version as the user will see it. If blank, the version attribute will be 
 # used here. This should be a single word, with no spaces.
-prettyVersion = 1.0.0  # This is treated as a String
+prettyVersion = 2.0.0  # This is treated as a String
 
 # The min and max revision of Processing compatible with your Library.
 # Note that these fields use the revision and not the version of Processing, 
