Update sentence in library.properties

--- a/library.properties
+++ b/library.properties
@@ -31,7 +31,7 @@ sentence = Allows you to use tracking data coming from [Augmenta](https://augmen
 # 'sentence' always will be prepended, so you should start by writing the
 # second sentence here. If your Library only works on certain operating systems,
 # mention it here.
-paragraph = Augmenta is a sensorless tracking technology for creative applications. People and objects can be tracked without limitations of number of people or area size. The technology has been designed for events or permanent installations in mind.
+paragraph = Augmenta is a beaconless tracking technology for creative applications. Spaces or surfaces of any dimensions can be made interactive thanks to this solution. The technology has been designed for events as well as for permanent installations.
 
 # Links in the 'sentence' and 'paragraph' attributes can be inserted using the
 # same syntax as for authors. 
